@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4ParticleChangeForTransport.icc,v 1.2 1999-12-15 14:53:55 gunter Exp $
+// $Id: G4ParticleChangeForTransport.icc,v 1.3 2000-02-16 16:10:04 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -17,9 +17,21 @@ inline
 }
 
 inline 
- G4VTouchable* G4ParticleChangeForTransport::GetTouchableChange() const
+ const G4VTouchable* G4ParticleChangeForTransport::GetTouchableChange() const
 {
   return theTouchableChange;
+}
+
+inline 
+ void G4ParticleChangeForTransport::SetMaterialChange(G4Material* fMaterial)
+{
+  theMaterialChange =   fMaterial;
+}
+
+inline 
+ G4Material* G4ParticleChangeForTransport::GetMaterialChange() const
+{
+  return theMaterialChange;
 }
 
 inline
