@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Step.icc,v 1.1 1999-10-06 01:21:48 kurasige Exp $
+// $Id: G4Step.icc,v 1.2 2000-02-16 16:10:04 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -119,7 +119,6 @@ inline
 inline 
  void G4Step::CopyPostToPreStepPoint( )
  { 
-   // Default equal operator is used for copy
    *(fpPreStepPoint) = *(fpPostStepPoint);
  }
 
@@ -164,12 +163,14 @@ inline
    fpPreStepPoint->SetMomentumDirection(fpTrack->GetMomentumDirection());
    fpPreStepPoint->SetKineticEnergy(fpTrack->GetKineticEnergy());
    fpPreStepPoint->SetTouchable(fpTrack->GetTouchable());
+   fpPreStepPoint->SetMaterial( fpTrack->GetTouchable()->GetVolume()->GetLogicalVolume()->GetMaterial());
    fpPreStepPoint->SetPolarization(fpTrack->GetPolarization());
    fpPreStepPoint->SetSafety(0.);
    fpPreStepPoint->SetStepStatus(fUndefined);
    fpPreStepPoint->SetProcessDefinedStep(0);
    fpPreStepPoint->SetMass(fpTrack->GetDynamicParticle()->GetMass());    
    fpPreStepPoint->SetWeight(fpTrack->GetWeight());
+   
    
    (*fpPostStepPoint) = (*fpPreStepPoint);
  }
