@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4StepPoint.cc,v 1.2 1999-12-15 14:53:56 gunter Exp $
+// $Id: G4StepPoint.cc,v 1.3 2000-02-16 16:10:06 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -28,19 +28,57 @@
 #include "G4StepPoint.hh"
 
 //////////////////////////
-G4StepPoint::G4StepPoint()
+G4StepPoint::G4StepPoint():
+//////////////////////////
+  fpTouchable(0),fpMaterial(0),fpProcessDefinedStep(0)  
+{
+
+}
+
+//////////////////////////
+G4StepPoint::G4StepPoint(const G4StepPoint &right):
+//////////////////////////
+  fPosition(right.fPosition),
+  fGlobalTime(right.fGlobalTime),
+  fLocalTime(right.fLocalTime),
+  fProperTime(right.fProperTime),
+  fMomentumDirection(right.fMomentumDirection),
+  fKineticEnergy(right.fKineticEnergy),
+  fpTouchable(right.fpTouchable),
+  fpMaterial(right.fpMaterial),
+  fSafety(right.fSafety),
+  fPolarization(right.fPolarization),
+  fStepStatus(right.fStepStatus),
+  fpProcessDefinedStep(right.fpProcessDefinedStep),
+  fMass(right.fMass),
+  fCharge(right.fCharge),
+  fWeight(right.fWeight)
+{}
+
+
+//////////////////////////
+G4StepPoint & G4StepPoint::operator=(const G4StepPoint &right)
 //////////////////////////
 {
-
+  if (this != &right) {
+    fPosition = right.fPosition;
+    fGlobalTime = right.fGlobalTime;
+    fLocalTime = right.fLocalTime;
+    fProperTime = right.fProperTime;
+    fMomentumDirection = right.fMomentumDirection;
+    fKineticEnergy = right.fKineticEnergy;
+    fpTouchable = right.fpTouchable;
+    fpMaterial = right.fpMaterial;
+    fSafety = right.fSafety;
+    fPolarization = right.fPolarization;
+    fStepStatus = right.fStepStatus;
+    fpProcessDefinedStep = right.fpProcessDefinedStep;
+    fMass = right.fMass;
+    fCharge = right.fCharge;
+    fWeight = right.fWeight;
+  }
+  return *this;
 }
-
-///////////////////////////
-G4StepPoint::~G4StepPoint()
-///////////////////////////
-{
-
-}
-
 
 
 
