@@ -1,4 +1,4 @@
-$Id: History,v 1.15 2000-02-13 15:11:33 kurasige Exp $
+$Id: History,v 1.16 2000-02-16 16:09:59 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Feb. 16, 2000 H.Kurashige
+-  Added cashing mechanism of pointer to material in G4StepPoint
+-  Added theMaterialChange in G4ParticleChangeForTransportation
+-  GetTouchable methods has been changed to give "const" pointer 
+
 Feb 13, 2000 H.Kurashige (track-V01-00-01)
 -  Added G4ParticleChangeForRadDecay
 -  Changed G4VParticleChange::AddSecondary to set secondary track weight equal to the primary's one
